<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_250sdp"
    android:layout_height="@dimen/_210sdp"
    android:background="@drawable/gradiant_bg2"
    android:orientation="vertical">

        <ImageView
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="@dimen/_45sdp"
            android:src="@drawable/excited_icon"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_7sdp"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:textColor="@android:color/white"
            android:text="@string/text_download"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_7sdp"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:textColor="@android:color/white"
            android:text="@string/enjoy_video"/>


        <LinearLayout
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:padding="@dimen/_10sdp"
                android:background="@drawable/btn_gradiant_bg"
                android:id="@+id/_gotit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/got_it"/>
        </LinearLayout>
    </LinearLayout>

